--- a/node-app/package.json
+++ b/node-app/package.json
@@ -1,10 +1,12 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Express.js backend with PostgreSQL and Cloudinary integration",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +24,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
