--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "npm install"
+    "postinstall": "npm install && npx sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
