--- a/config/config.json
+++ b/config/config.json
@@ -7,17 +7,17 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "postgres",
+    "password": "123",
+    "database": "kandeel",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "postgres",
+    "password": "123",
+    "database": "kandeel",
+    "host": "localhost",
     "dialect": "postgres"
   }
 }
