Moved project to root for Render deploymentE

--- a/config/config.json
+++ b/config/config.json
@@ -13,11 +13,9 @@
     "host": "localhost",
     "dialect": "postgres"
   },
+
   "production": {
-    "username": "postgres",
-    "password": "123",
-    "database": "kandeel",
-    "host": "localhost",
+    "use_env_variable": "DB_URL",
     "dialect": "postgres"
   }
 }
