--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "app",
   "version": "1.0.0",
   "description": "An Express.js backend with PostgreSQL and Cloudinary integration",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "postinstall": "npx sequelize-cli db:migrate"
   },
   "keywords": [],
