--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "postinstall": "npx sequelize-cli db:migrate"
+    "postinstall": "NODE_ENV=production npx sequelize-cli db:migrate"
   },
   "keywords": [],
   "author": "",
